# Juce-Equal-Loudness

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: demo.cpp
modules/juce_equal_loudness/: juce_equal_loudness.cpp  juce_equal_loudness.h
tests/: iso226_tests.cpp
